# sat-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/crawler/: Cargo.toml
crates/crawler/src/: lib.rs
crates/sat-cfdi/: Cargo.toml  agents.md
crates/sat-cfdi/src/: catalogs.rs  complement.rs  error.rs  freight.rs  invoice.rs  lib.rs  payment.rs  payroll.rs
crates/sat-cli/: Cargo.toml
crates/sat-cli/src/: main.rs
crates/sat-crawler/: Cargo.toml  agents.md
crates/sat-crawler/src/: config.rs  constants.rs  crawler.rs  crawls.rs  events.rs  lib.rs  logger.rs  utils.rs
crates/sat-crawler/src/crawls/: download_csf.rs  download_invoices.rs  steps.rs  validate_credentials.rs
crates/sat-crawler/src/crawls/steps/: login.rs  login_csf.rs
downloads/: 0D04A641-9BE1-4207-8B13-68850CE9C677.xml  1E9413F8-87A2-404F-9461-CDB50A09E939.xml  AAA1BE4A-3033-4219-98CD-E566DFE9BCCA.xml  BEE15C4D-5637-44D3-81B6-29A5D7EFC566.xml  CE33EF50-B69D-417D-B321-57FD9D3ED3BB.xml
