[package]
name = "satcrawler"
version = "0.0.1"
edition = "2021"

[dependencies]
chromiumoxide = { version = "0.7", features = ["tokio", "tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
twocaptcha = "0.0.3"
tempfile = "3.27.0"
base64 = "0.22.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde = '1.0.228'
uuid = { version = "1.22.0", features=["v4"] }
async-trait = '0.1.89'

